# genetic-aesthetic-mcp

./: README.md  pyproject.toml
src/genetic_aesthetic_mcp/: __init__.py  __main__.py  server.py
